# powerindex

./: .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  MANIFEST  README.ipynb  README.md  README.rst  Readme.ipynb  environment.yml  pyproject.toml  requirements.txt  setup.py
docs/: German-elections-2025-analysis.md  index.md
examples/: eec1957.csv
powerindex/: __init__.py  powerindex.py  testpowerindex.py
