[project]
name = "powerindex"
version = "0.0.0"
description = "python library to calculate power indices in weighted voting games"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7.1",
    "pylint>=2.17.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
